--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "foundry-app/lib/forge-std"]
 	path = foundry-app/lib/forge-std
 	url = https://github.com/foundry-rs/forge-std
+[submodule "nft-project/foundry-app/lib/forge-std"]
+	path = nft-project/foundry-app/lib/forge-std
+	url = https://github.com/foundry-rs/forge-std
